--- a/src/app/pages/constraints/constraints.component.html
+++ b/src/app/pages/constraints/constraints.component.html
@@ -1,1 +1,13 @@
-<p>constraints works!</p>
+<nb-card>
+  <nb-card-header>
+    Constraints
+  </nb-card-header>
+  <nb-card-body>
+    <ng2-smart-table [settings]="settings"
+                     [source]="source"
+                     (createConfirm)="onAdd($event)"
+                     (editConfirm)="onEdit($event)"
+                     (deleteConfirm)="onDelete($event)">
+    </ng2-smart-table>
+  </nb-card-body>
+</nb-card>
