--- a/src/app/pages/gsq-log/gsq-log.component.html
+++ b/src/app/pages/gsq-log/gsq-log.component.html
@@ -1,6 +1,6 @@
 <nb-card>
   <nb-card-header>
-    Group Satisfaction Quality
+    Goal Satisfaction Quality
   </nb-card-header>
   <nb-card-body>
     <ng2-smart-table *ngIf="settings" [settings]="settings"
