comment bug fix

--- a/src/app/pages/metrics/metrics.component.html
+++ b/src/app/pages/metrics/metrics.component.html
@@ -29,11 +29,11 @@
                   <td>{{ row.data[goal.name][constraint] }}</td>
                 </ng-container>
               </ng-container>
-              <ng-container *ngFor="let goal of goals">
+              <!--<ng-container *ngFor="let goal of goals">
                 <ng-container *ngFor="let constraint of constraints">
                   <td>{{ row.metric[goal.name][constraint] }}</td>
                 </ng-container>
-              </ng-container>
+              </ng-container>-->
             </tr>
             <tr>
               <td colspan="2">Standard Deviation</td>
